aksmigrate/test/e2e/manifests/scenario2-namedports/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-namedports
  labels:
    aksmigrate-e2e: "true"
